# niguiri

./: .gitmodules  Cargo.toml  README.md
NiGuiRi/: Cargo.toml
src/: main.rs
testing/: niri-test.kdl
